--- a/src/backend/base/langflow/templates/fastapi_app/requirements.txt.jinja2
+++ b/src/backend/base/langflow/templates/fastapi_app/requirements.txt.jinja2
@@ -1,7 +1,7 @@
-fastapi>=0.95.0,<0.96.0
-uvicorn>=0.22.0,<0.23.0
-langflow>=0.5.0
-python-multipart>=0.0.6
-pydantic>=1.10.0
-langchain>=0.0.267
-jinja2>=3.1.2 
+fastapi
+uvicorn
+langflow
+python-multipart
+pydantic
+langchain
+jinja2
